<resources>
    <string name="app_name">Banco Online</string>
    <string name="lblMail">Correo Electronico</string>
    <string name="lblCuitCuil">Cuit/Cuil</string>
    <string name="lblMoneda">Moneda</string>
    <string name="lblMonedaDolar">US$</string>
    <string name="lblMonedaPeso">AR$</string>
    <string name="lblMontoAInvertir">Monto a invertir</string>
    <string name="lblDias">Dias</string>
    <string name="lblDiasSelecc">Seleccione cantidad de días</string>
    <string name="lblIntereses">$</string>
    <string name="lblAvisar">Avisar por mail antes del vencimiento</string>
    <string name="lblRendimiento">Rendimiento</string>
    <string name="ckBoxATyC">Aceptar Terminos y Condiciones</string>
    <string name="txtBtnPlazoFijo">HACER PLAZO FIJO</string>
    <string name="lblAccionVencimientoRenovar">RENOVAR VENCIMIENTO</string>
    <string name="lblAccionVencimientoAcreditar">ACREDITAR EN CUENTA</string>
</resources>
